; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_gen_bitmap.c_ext2fs_mem_is_zero.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_gen_bitmap.c_ext2fs_mem_is_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ext2fs_mem_is_zero.zero_buf = internal constant [256 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_mem_is_zero(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  br label %6

6:                                                ; preds = %14, %2
  %7 = load i64, i64* %5, align 8
  %8 = icmp uge i64 %7, 256
  br i1 %8, label %9, label %19

9:                                                ; preds = %6
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @memcmp(i8* %10, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @ext2fs_mem_is_zero.zero_buf, i64 0, i64 0), i64 256)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %30

14:                                               ; preds = %9
  %15 = load i64, i64* %5, align 8
  %16 = sub i64 %15, 256
  store i64 %16, i64* %5, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 256
  store i8* %18, i8** %4, align 8
  br label %6

19:                                               ; preds = %6
  %20 = load i64, i64* %5, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %19
  %23 = load i8*, i8** %4, align 8
  %24 = load i64, i64* %5, align 8
  %25 = call i64 @memcmp(i8* %23, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @ext2fs_mem_is_zero.zero_buf, i64 0, i64 0), i64 %24)
  %26 = icmp ne i64 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  store i32 %28, i32* %3, align 4
  br label %30

29:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %22, %13
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
